First attempt at splitting up the code. Needs work, as it can be simplified further

--- a/Interactive Fiction - Dungeon Escape/Interactive Fiction - Dungeon Escape.vcxproj
+++ b/Interactive Fiction - Dungeon Escape/Interactive Fiction - Dungeon Escape.vcxproj
@@ -143,7 +143,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gameFunctions.cpp" />
+    <ClCompile Include="gameVariables.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="gameEnums.h" />
+    <ClInclude Include="gameFunctions.h" />
+    <ClInclude Include="gameVariables.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
