--- a/Interactive Fiction - Dungeon Escape/Interactive Fiction - Dungeon Escape.vcxproj.filters
+++ b/Interactive Fiction - Dungeon Escape/Interactive Fiction - Dungeon Escape.vcxproj.filters
@@ -21,12 +21,30 @@
     <ClCompile Include="gameFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Rooms\Base\Room.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Rooms\CellRoom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Rooms\GameVariables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gameEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rooms\GameVariables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rooms\Base\Room.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rooms\CellRoom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
