--- a/Interactive Fiction - Dungeon Escape/Interactive Fiction - Dungeon Escape.vcxproj.filters
+++ b/Interactive Fiction - Dungeon Escape/Interactive Fiction - Dungeon Escape.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClCompile Include="Rooms\OfficeRoom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Battle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Rooms\HallwayEndRoom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Rooms\BattleRoom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameFunctions.h">
@@ -69,6 +78,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Rooms\OfficeRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Battle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rooms\HallwayEndRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rooms\BattleRoom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
